--- a/IosCase/Base.lproj/Main.storyboard
+++ b/IosCase/Base.lproj/Main.storyboard
@@ -38,30 +38,30 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SehirlerCell" id="hKh-PV-dOe" customClass="SehirlerTVCell" customModule="IosCase" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="382" height="52.5"/>
+                                        <rect key="frame" x="0.0" y="44.5" width="382" height="70.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hKh-PV-dOe" id="r7X-kr-uyc">
-                                            <rect key="frame" x="0.0" y="0.0" width="382" height="52.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="382" height="70.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="eHQ-OJ-KYW">
-                                                    <rect key="frame" x="36" y="10" width="310" height="32.5"/>
+                                                    <rect key="frame" x="36" y="10" width="310" height="50.5"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="999" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="cZi-hC-sjq">
-                                                            <rect key="frame" x="0.0" y="0.0" width="32" height="32.5"/>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="999" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cZi-hC-sjq">
+                                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50.5"/>
                                                             <color key="tintColor" red="0.45882352941176469" green="0.011764705882352941" blue="0.99215686274509807" alpha="1" colorSpace="calibratedRGB"/>
                                                         </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="g3H-vq-Juf">
-                                                            <rect key="frame" x="64" y="0.0" width="165" height="32.5"/>
+                                                            <rect key="frame" x="82" y="0.0" width="147" height="50.5"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vbd-Ou-E0f">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="165" height="18"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="147" height="36"/>
                                                                     <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="14"/>
                                                                     <color key="textColor" name="colorLbl3"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hJu-0E-yAZ">
-                                                                    <rect key="frame" x="0.0" y="18" width="165" height="14.5"/>
+                                                                    <rect key="frame" x="0.0" y="36" width="147" height="14.5"/>
                                                                     <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="12"/>
                                                                     <color key="textColor" red="0.45882352939999999" green="0.01176470588" blue="0.99215686270000003" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
@@ -69,7 +69,7 @@
                                                             </subviews>
                                                         </stackView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="999" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F7L-Ea-GVE">
-                                                            <rect key="frame" x="261" y="0.0" width="49" height="32.5"/>
+                                                            <rect key="frame" x="261" y="0.0" width="49" height="50.5"/>
                                                             <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="20"/>
                                                             <color key="textColor" red="0.45882352939999999" green="0.01176470588" blue="0.99215686270000003" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -743,7 +743,6 @@
         <image name="01d" width="26.5" height="27.5"/>
         <image name="01n" width="21.5" height="21.5"/>
         <image name="02n" width="27.5" height="18"/>
-        <image name="Image" width="32" height="32"/>
         <image name="asagi" width="9" height="10"/>
         <image name="damla" width="13.5" height="18.5"/>
         <image name="goz" width="17.5" height="11"/>
