--- a/IosCase/Base.lproj/Main.storyboard
+++ b/IosCase/Base.lproj/Main.storyboard
@@ -576,17 +576,17 @@
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="WeeklyWeatherTVCell" id="IHk-gd-kSQ" customClass="AnasayfaWeeklyWeatherTVCell" customModule="IosCase" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="50" width="395.66666666666669" height="55.333332061767578"/>
+                                                        <rect key="frame" x="0.0" y="50" width="395.66666666666669" height="44"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IHk-gd-kSQ" id="qoa-56-HJX">
-                                                            <rect key="frame" x="0.0" y="0.0" width="395.66666666666669" height="55.333332061767578"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="395.66666666666663" height="44"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="XRo-A7-L2B">
-                                                                    <rect key="frame" x="15" y="14.999999999999998" width="365.66666666666669" height="25.333333333333329"/>
+                                                                    <rect key="frame" x="15" y="15" width="365.66666666666669" height="14"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="999" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9jX-ly-NPA">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="183" height="25.333333333333332"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="183" height="14"/>
                                                                             <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="12"/>
                                                                             <color key="textColor" name="colorLbl2"/>
                                                                             <nil key="highlightedColor"/>
@@ -595,10 +595,10 @@
                                                                             </userDefinedRuntimeAttributes>
                                                                         </label>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="999" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="tSJ-I7-wjl">
-                                                                            <rect key="frame" x="183" y="0.0" width="182.66666666666663" height="25.333333333333332"/>
+                                                                            <rect key="frame" x="183" y="0.0" width="182.66666666666663" height="14"/>
                                                                             <subviews>
                                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="01n" translatesAutoresizingMaskIntoConstraints="NO" id="4x8-wr-zOF">
-                                                                                    <rect key="frame" x="0.0" y="0.0" width="50.666666666666664" height="25.333333333333332"/>
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="50.666666666666664" height="14"/>
                                                                                     <constraints>
                                                                                         <constraint firstAttribute="width" constant="25" id="gw0-g2-npD"/>
                                                                                         <constraint firstAttribute="height" constant="25" id="gzs-Qe-mZz"/>
@@ -608,7 +608,7 @@
                                                                                     </userDefinedRuntimeAttributes>
                                                                                 </imageView>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gel-mN-P8k">
-                                                                                    <rect key="frame" x="65.666666666666686" y="0.0" width="51" height="25.333333333333332"/>
+                                                                                    <rect key="frame" x="65.666666666666686" y="0.0" width="51" height="14"/>
                                                                                     <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="14"/>
                                                                                     <color key="textColor" name="colorLbl2"/>
                                                                                     <nil key="highlightedColor"/>
@@ -617,7 +617,7 @@
                                                                                     </userDefinedRuntimeAttributes>
                                                                                 </label>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iyW-fa-Rbe">
-                                                                                    <rect key="frame" x="131.66666666666669" y="0.0" width="51" height="25.333333333333332"/>
+                                                                                    <rect key="frame" x="131.66666666666669" y="0.0" width="51" height="14"/>
                                                                                     <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="14"/>
                                                                                     <color key="textColor" name="colorLbl2"/>
                                                                                     <nil key="highlightedColor"/>
